--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <p class="project-desc">
 
                         </p>
-                        <img src="imgs/New_Recording_-_12_5_2022__7_52_59_PM_AdobeExpress_AdobeExpress.gif" alt="" height="300">
+                        <img src="imgs/mellow_bathtub.gif" alt="" height="330">
                     </div>
                 </div>
             </section>
